--- a/prototypes/LaTeX.tex
+++ b/prototypes/LaTeX.tex
@@ -1,17 +1,14 @@
 % -*- tex -*-
 
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt,draft]{article}
 \usepackage[a4paper]{geometry}
 \geometry{a4paper,nohead,verbose,tmargin=2.5cm,bmargin=2.5cm,lmargin=3cm,rmargin=3cm}
 \usepackage[english,portuguese]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{verbatim,listings, tikz}
-\usepackage{graphicx,url,color,xcolor,listings,textcomp}
-%\usepackage{setspace, breakurl,amssymb,amsmath}
-%\usepackage[pdftex,unicode=true,bookmarks=true,bookmarksnumbered=true,bookmarksopen=true,bookmarksopenlevel=1,
-% breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]{hyperref}
-%\hypersetup{pdftitle={title}, pdfauthor={thiago}, pdfsubject={subject}}
+\usepackage{verbatim,listings,tikz,graphicx,url,color,xcolor,listings,textcomp,setspace,breakurl,amssymb,amsmath}
+\usepackage[pdftex,unicode=true,bookmarks=true,bookmarksnumbered=true,bookmarksopen=true,bookmarksopenlevel=1,breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=false]{hyperref}
+\hypersetup{pdftitle={title}, pdfauthor={thiago}, pdfsubject={subject}}
 
 \title{Título}
 \author{Autor}
@@ -27,10 +24,7 @@ Abstract template.
 \end{abstract}
 
 \section{Section Template}
-
-Paragraph 1.
-Paragraph 2.
-Paragraph 3.
+Paragraph.
 
 \section{Table Template}
 
