--- a/emacs/.emacs.d/genesis.org
+++ b/emacs/.emacs.d/genesis.org
@@ -510,7 +510,10 @@ Activate =straight.el='s =use-package= integration:
 (use-package undo-tree
   :ensure t
   :diminish undo-tree-mode
-  :config (global-undo-tree-mode t)
+  :config
+  (setq undo-tree-auto-save-history t)
+  (setq undo-tree-history-directory-alist '(("." . "~/.emacs.d/undo")))
+  (global-undo-tree-mode t)
   :bind ("C-+" . undo-tree-redo))
 #+END_SRC
 
